[tool.poetry]
name = "aula08-bootcamp"
version = "0.1.0"
description = ""
authors = ["Marcelo Shibuya <marcelo.hshibuya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.20.3"
pandas = "^2.2.2"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
